--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <title>Site Maintenance</title>
 <style>
   body { text-align: center; padding: 150px; }
@@ -11,7 +13,7 @@
 <article>
     <h1>We&rsquo;ll be back soon!</h1>
     <div>
-        <p>Sorry for the inconvenience but we&rsquo;re performing some maintena$
-
+        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. We&rsquo;ll be back online Monday after 7am PST!</p>
+        
     </div>
 </article>
